--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -66,7 +66,7 @@ $addIcon=$config->getParameter('fileUploadBtnIcon', array());
     if(!empty($addIcon)){
 
         ?>
-        .file-list .droppable:after {
+        .file-list .droppable .add-btn {
             background-image:url("<?php echo UrlFrom($addIcon[0].'?thumb=x>100y>100'); ?>");
         }
         <?php
