administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -418,6 +418,9 @@ body.dragover .file-item.droppable-hide {
     background-repeat: no-repeat;
 }
 
+.with-mediaTypeIcon img {
+    display: none;
+}
 
 .file-item button {
     height: 20px;
