administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -418,7 +418,7 @@ body.dragover .file-item.droppable-hide {
     background-repeat: no-repeat;
 }
 
-.with-mediaTypeIcon img {
+.file-container .with-mediaTypeIcon img {
     display: none;
 }
 
