administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -2434,6 +2434,10 @@ ul.user-roles:hover>li.active {
     pointer-events: none;
 }
 
+.is-offline .user-profile-icon {
+    filter: grayscale(1);
+}
+
 ul.inline-filter {
     display: block;
     width: 100%;
