administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -3053,6 +3053,16 @@ img.static-map {
     font-size: 16px;
     text-indent: 50px;
 }
+
+.search-panel button.primary-btn {
+    margin: 10px;
+    margin-right: 0;
+    padding: 12.5px 30px;
+    margin-bottom: 0;
+}
+
+
+
     
     
     
