administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -3063,7 +3063,24 @@ img.static-map {
 
 
 
-    
+.ui-view.some-color-0>div {
+    background-color: #f2e3cf;
+}
+.ui-view.some-color-1>div {
+    background-color: #bac9e4;
+}
+.ui-view.some-color-2>div {
+    background-color: #effad7;
+}
+.ui-view.some-color-3>div {
+    background-color: #ead7fa;
+}
+.ui-view.some-color-4>div {
+    background-color: #fad7d7;
+}
+.ui-view.some-color-5>div {
+    background-color: #d7dafa;
+}
     
     
     
