--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -3082,7 +3082,14 @@ img.static-map {
     background-color: #d7dafa;
 }
     
-    
+.recent-item>div {
+    padding: 15px 10px;
+    box-sizing: border-box;
+    border: 1px solid rgba(0,0,0,0.3);
+}
+
+
+
     
     
     
