administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -263,6 +263,10 @@ label.boolean-field p {
     font-size: 10px;
 }
 
+.left-panel .application-logo.big {
+    height: 250px;
+}
+
 
 .ToolbarBottom, .ToolbarBottom>.droppable {
     min-height: 30px;
