--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -66,6 +66,8 @@ if($config->getParameter('showSplitProjectDetail')){
    
    .ui-view.main-content-area>div>div{
         display:inline-table;
+        width: 100%;
+        height: 100%;
     }
     
     <?php
