--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -1,3 +1,44 @@
+
+$highlightBtnColor:#ff0258;
+
+
+[data-view="tagsDetail"] .section-module {
+    min-height: 55px;
+}
+
+[data-view="tagsDetail"] .section-module .tag-item:first-child {
+    margin-top:20px;
+}
+
+[data-view="mainActivityDetail"] .ui-view.inset-shading>div,[data-view="mainActivityDetail"] .discussion{
+
+    background-color:transparent;
+}
+
+[data-view="mainActivityDetail"] .ui-post-view>div {
+    background: white;
+    border-radius: 8px;
+    margin: 30px 10px;
+    padding: 10px 10px;
+    display: block;
+}
+
+
+[data-view="archiveListView"].inset-menu-shading>div{
+   background-color:transparent;
+}
+
+[data-view="singleArchivedProjectListItemDetail"] .buttonset{
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+[data-view="singleArchivedProjectListItemDetail"] .primary-btn{
+   padding: 5px 10px;
+   font-size: 12px;
+}
+
 .section-title {
  
     font-size: 30px;
@@ -15,6 +56,10 @@
 }
 
 
+.ui-view.inline-list-item.first-item.tasks-list-item-icon {
+    display: none;
+}
+
 
 .ui-view.left-panel {
     background-color: #525252;
@@ -31,6 +76,54 @@
 .navigation-menu button {
     color: #bebebe;
 }
+
+
+
+ul.project li {
+    padding-bottom:10px;
+    margin-bottom:20px;
+}
+ul.project li button {
+    /* margin: 10px; */
+    /* margin-bottom: 30px; */
+    padding: 8px 25px;
+    background: rgba(0,0,0,0.1);
+    border-radius: 20px;
+}
+ul.project li.active  {
+    border-bottom: 3px solid $highlightBtnColor;
+}
+ul.project li.active button {
+    background-color: adjust-color($highlightBtnColor, $alpha:-0.3);
+}
+
+ul.project li.active button {
+    color: white;
+}
+
+ul.project li button:focus {
+    outline:none;
+}
+
+
+.withItemsIndicator.hasItems span.items {
+    position: absolute;
+    bottom: 2px;
+    right: -7px;
+}
+
+.withItemsIndicator.hasItems span.items:before {
+    background-color:#525252;
+    color:white;
+}
+
+
+.withItemsIndicator.hasItems {
+    position: relative;
+}
+
+
+
 
 .ui-view.dashboard-main {
     background: #f7f7f7;
@@ -81,16 +174,36 @@
     width:250px;
 }
 
-.search-panel input.search-input:focus {
+.search-panel input.search-input:focus, .search-panel input.search-input.focus {
     width: 400px;
-    /* ; */
+    outline: none;
+    box-shadow: 0 0 4px rgba(0,0,0,0.3) inset;
+    border-color: #c6c6c6;
 }
+
+  .search-panel .search-container{
+    position:relative;
+  }
+
+  .search-panel .search-result-list{
+    margin-top:0;
+    margin-left:1px;
+  }
 
 .dataset-description {
     font-size: 12px;
     color: #484848;
     padding: 0 10px;
     padding-right: 20%;
+    height: 65px;
+    overflow: hidden;
+}
+
+.ui-view.dataset-item .section-title {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: calc( 100% - 80px );
+    overflow: hidden;
 }
 
 .dataset-item .field-value-module.item-icon {
@@ -99,6 +212,14 @@
     float: right;
     background: rgba(0,0,0,0.1);
     border-radius: 100%;
+    background-size: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+
+}
+
+.ui-view.section-module.dataset-item {
+    height: unset;
 }
 
 
@@ -110,7 +231,7 @@
 }
 
 .field-value-module.item-icon.left-icons:after {
-        content: "+2";
+        content:"+" attr(data-count-projects);
     position: relative;
     left: 6px;
     top: -5px;
@@ -127,7 +248,7 @@ button.primary-btn.nav-new-btn {
     float: none;
     margin: 30px 49px;
     width: 200px;
-    background-color: #ff0058;
+    background-color: $highlightBtnColor;
     height: 55px;
     border-radius: 27.5px;
     text-transform: capitalize;
@@ -150,6 +271,28 @@ button.primary-btn.nav-new-btn:hover {
     transition: background-color 0.2s, box-shadow 0.2s;
     box-shadow: 0 0 3px rgba(255,255,255,0.1);
     
+}
+
+
+
+.navigation-menu ul {
+    padding: 0;
+}
+
+.navigation-menu ul label {
+    padding-left: 40px;
+  
+}
+
+.navigation-menu ul li {
+    padding: 10px;
+    padding-left: 40px;
+    margin: 5px 0;
+}
+
+.navigation-menu ul li.active {
+    background-color: adjust-color($highlightBtnColor, $alpha:-0.3);
+    border-right: 4px solid $highlightBtnColor;
 }
 
 
@@ -214,5 +357,58 @@ button.primary-btn.nav-new-btn:hover {
         width: calc( 100% - 32px )
         
     }
+}
+
+
+
+/*cancel icon highlight*/
+.navigation-menu li:before {
+    filter: brightness(0);
+}
+
+
+
+.widget-33.geolive-top-bar .search-bar-btn {
+    z-index: 2;
+    background-color: $highlightBtnColor;
+    padding: 0px 20px;
+    position: relative;
+    left: 35px;
+    border-radius: 20px 0 0 20px;
+    border-color: transparent;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+.widget-33.geolive-top-bar input.search-input {
+    border-radius: 0 25px 25px 0;
+    background-color: #f7f7f7;
+    border-color: rgba(0, 0, 0, 0.1);
+    transition: width 0.3s;
+    box-shadow: none;
+
+}
+.widget-33.geolive-top-bar input.search-input {
+    outline:none;
+}
+
+.inline-btn.optionlist {
+    background-color: rgba(0,0,0,0.1);
+}
+
+.inline-btn.optionlist ul, .inline-btn.sort ul {
+    background-color: white;
+    box-shadow: 0 0 3px rgba(0,0,0,0.3); 
+    border-radius: 3px; 
+}
+
+.inline-btn.optionlist li, .inline-btn.sort.hasFilter li, .inline-btn.sort.hasOrder li {
+    color:black;
+    border-color: white;
+    /* box-shadow: 0 0 3px rgba(0,0,0,0.3); */
+    /* border-radius: 3px; */
+}
+
+.inline-btn.optionlist li:hover, .inline-btn.sort li:hover {
+    background-color:#d7d7d7;
 }
 
