administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -282,7 +282,8 @@ button.primary-btn.nav-new-btn:hover {
 }
 
 .navigation-menu ul label {
-    padding-left: 40px;
+    /*padding-left: 40px;*/
+    display:none;
   
 }
 
