--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -293,10 +293,16 @@ button.primary-btn.nav-new-btn:hover {
     padding-left: 40px;
     margin: 5px 0;
 }
+
+
+.left-panel.closed .navigation-menu ul li {
+     padding-left: 10px;
+}
 @media screen and (max-width: 1250px){
     .navigation-menu ul li {
-        padding-left: 10px;
-  
+        padding-left: 5px;
+        margin: 12px 0;
+        height: 20px;
     }
 }
 
