administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -341,7 +341,7 @@ button.primary-btn.nav-new-btn:hover {
 
 
 .ui-view.left-panel.closed button.primary-btn.nav-new-btn{
-
+    font-size:0;
     width:30px;
     height:30px;
     margin:10px;
