--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -2951,6 +2951,18 @@ img.static-map {
         background-size: auto 80%; 
         margin-left: 30px; 
     }
+    
+    button.primary-btn, .WizardButton, .WizardTitle li, .t-btn{
+            padding: 5px 10px;
+            font-weight: 100;
+            margin: 5px;
+            font-size: 0.75em;
+    }
+    
+    .primary-btn.small {
+        padding: 3px 8px;
+        font-size: .6em;
+    }
 }
 
 @media screen and (max-width: 650px){
