administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -619,6 +619,7 @@ span.warn {
 .section-title {
     padding: 10px;
     font-size: 20px;
+    line-height:1.1em;
 }
 
 .ui-list-view .ui-view:first-child, .inline-list-item.first-item {
