--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -38,7 +38,9 @@ $highlightBtnColor:#ff0258;
    padding: 5px 10px;
    font-size: 12px;
 }
-
+.search-bar-content {
+    width: unset;
+}
 .section-title {
  
     font-size: 30px;
